--- a/PerfectProperties.html
+++ b/PerfectProperties.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Poulos Portfolio Project</title>
+  <title>Perfect Properties</title>
 </head>
 
 <body>
@@ -20,52 +20,7 @@
     </div>
   </header>
   <div>
-    <div>
-      <h1>Hi, my name is Alex Poulos <span>A UX designer based in Phoenix, Arizona with a background in Psychology and Graphic Design.</span> </h1>
-      <p>I’m a UX Designer with a background in Psychology, Design, and Marketing. I have a passion to learn and acquire new skills and stay at the forefront of my field. I use those skills to create the best possible design from multiple different
-        perspectives, creating the most effective User Experience possible. I am also happy to consult with others based on the skills with graphic and web design I have, so feel free to connect.</p>
-    </div>
-  </div>
-  <div>
-    <div>
-      <h2>My Work</h2>
-      <div>
-        <div>
-          <picture>
-            <source srcset="img/Inktank 600px.jpg" media="(max-width:767px)">
-            <img src="img/Inktank 1200px.jpg" alt="My Image">
-          </picture>
-        </div>
-        <div>
-          <h3>Ink Tank</h3>
-          <p>
-            Start to finish researched and design of an app to improve and streamline the tattooing process.
-          </p>
-          <p>
-            User Research, UX Design, UI Design, Wire-framing, Prototyping, Logo Design
-          </p>
-          <a href="">Read more</a>
-        </div>
-      </div>
-      <div>
-        <div>
-          <picture>
-            <source srcset="img/Perfect Properties Portfolio_Page_01 600px.jpg" media="(max-width:767px)">
-            <img src="img/Perfect Properties Portfolio_Page_01 1200px.jpg" alt="My Image">
-          </picture>
-        </div>
-        <div>
-          <h3>Perfect Properties</h3>
-          <p>
-            UI case study for an investment property focusing on first time investors wanting quick and easy access to browsing properties.
-          </p>
-          <p>
-            User Research, UX Design, UI Design, Wire-framing, Prototyping, Logo Design
-          </p>
-          <a href="PerfectProperties.html">Read more</a>
-        </div>
-      </div>
-    </div>
+
   </div>
   <footer id="contact">
     <div>
