updated page title /about.html

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Poulos Portfolio Project - About Page</title>
+  <title>About Alex Poulos</title>
 </head>
 
 <body>
