--- a/PerfectProperties.html
+++ b/PerfectProperties.html
@@ -19,9 +19,125 @@
       </nav>
     </div>
   </header>
-  <div>
+  <main>
+    <div>
+    <div>
+      <h1>Perfect Properties</h1>
+    </div>
+      <div>
+        <picture>
+          <source srcset="img/Perfect Properties Portfolio_Page_01 600px.jpg" media="max-width:767px">
+            <img src="img/Perfect Properties Portfolio_Page_01 1200px.jpg" alt="PerfectProperties1">
+        </picture>
+      </div>
+      <div>
+        <p>The Perfect Properties project involves a UI design for a real estate investing web application.</p>
+      </div>
+      <div>
+        <div>
+          <h2>Project Overview</h2>
+        </div>
+      <div>
+        <picture>
+          <source srcset="img/Perfect Properties Portfolio_Page_02 600px.jpg" media="max-width:767px">
+            <img src="img/Perfect Properties Portfolio_Page_02 1200px.jpg" alt="PerfectProperties2">
+        </picture>
+      </div>
+      <div>
+        <p>Goals and guidelines of the Perfect Properties UI case study.</p>
+      </div>
+      </div>
+      <div>
+        <div>
+          <h2>Research</h2>
+        </div>
+      <div>
+        <picture>
+          <source srcset="img/Perfect Properties Portfolio_Page_03 600px.jpg" media="max-width:767px">
+            <img src="img/Perfect Properties Portfolio_Page_03 1200px.jpg" alt="PerfectProperties3">
+        </picture>
+      </div>
+      <div>
+        <p>The first step of any project is research, and this one began with research into competitor apps as well as our user persona and their needs.</p>
+      </div>
+      </div>
+      <div>
+      <div>
+        <h2>User Flows</h2>
+      </div>
 
+      <div>
+        <picture>
+          <source srcset="img/Perfect Properties Portfolio_Page_04 600px.jpg" media="max-width:767px">
+            <img src="img/Perfect Properties Portfolio_Page_04 1200px.jpg" alt="PerfectProperties4">
+        </picture>
+      </div>
+      <div>
+        <p>Once research has been compiled, design work begins. The first step is working on a user flow to create a roadmap for what functions and pages the app should have.</p>
+      </div>
+      </div>
+      <div>
+        <div>
+          <h2>Wireframes</h2>
+        </div>
+      <div>
+        <picture>
+          <source srcset="img/Perfect Properties Portfolio_Page_10 600px.jpg" media="max-width:767px">
+            <img src="img/Perfect Properties Portfolio_Page_10 1200px.jpg" alt="PerfectProperties10">
+        </picture>
+      </div>
+      <div>
+        <p>Once the general overview of the app is decided on, I created basic wireframes using Balsamiq. These allowed me to get a feel for the layout and functionality without worrying about color or font or photos.</p>
+      </div>
+      </div>
+      <div>
+        <div>
+          <h2>Mood Boards</h2>
+        </div>
+      <div>
+        <picture>
+          <source srcset="img/Perfect Properties Portfolio_Page_29 600px.jpg" media="max-width:767px">
+            <img src="img/Perfect Properties Portfolio_Page_29 1200px.jpg" alt="PerfectProperties29">
+        </picture>
+        <picture>
+          <source srcset="img/Perfect Properties Portfolio_Page_30 600px.jpg" media="max-width:767px">
+            <img src="img/Perfect Properties Portfolio_Page_30 1200px.jpg" alt="PerfectProperties30">
+        </picture>
+      </div>
+      <div>
+        <p>Before moving from the wireframe to mockups, I created mood boards for two different styles and then did various testing with both before deciding on which to proceed with.</p>
+      </div>
+      </div>
+      <div>
+      <div>
+        <h2>Mid Fidelity Mockups</h2>
+      </div>
+      <div>
+        <picture>
+          <source srcset="img/Perfect Properties Portfolio_Page_38 600px.jpg" media="max-width:767px">
+            <img src="img/Perfect Properties Portfolio_Page_38 1200px.jpg" alt="PerfectProperties38">
+        </picture>
+      </div>
+      <div>
+        <p>When moving to mid-fidelity mockups, I decided to combine the two styles and move forward with a modern design using a blue theme.</p>
+      </div>
+      </div>
+      <div>
+        <div>
+        <h2>Final Mockups</h2>
+        </div>
+      <div>
+        <picture>
+          <source srcset="img/Perfect Properties Portfolio_Page_71 600px.jpg" media="max-width:767px">
+            <img src="img/Perfect Properties Portfolio_Page_71 1200px.jpg" alt="PerfectProperties38">
+        </picture>
+      </div>
+      <div>
+        <p>Moving from initial mobile mockups, several small changes and iterations took place until the various screens were transformed into high-fidelity mockups at various breakpoints. I then transformed the mockups into presentation mockups.</p>
+      </div>
+      </div>
   </div>
+  </main>
   <footer id="contact">
     <div>
       <h2>Get in Touch</h2>
