Fixing file names

--- a/PerfectProperties.html
+++ b/PerfectProperties.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div>
-      <img src="img/gearwingAsset 5.png" alt="GearWing Logo">
+      <img src="img/gearwingAsset5.png" alt="GearWing Logo">
       <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
@@ -26,8 +26,8 @@
       </div>
       <div>
         <picture>
-          <source srcset="img/Perfect Properties Portfolio_Page_01 600px.jpg" media="max-width:767px">
-          <img src="img/Perfect Properties Portfolio_Page_01 1200px.jpg" alt="PerfectProperties1">
+          <source srcset="img/Perfect_Properties_Portfolio_Page_01_600px.jpg" media="max-width:767px">
+          <img src="img/Perfect_Properties_Portfolio_Page_01_1200px.jpg" alt="PerfectProperties1">
         </picture>
       </div>
       <div>
@@ -39,8 +39,8 @@
         </div>
         <div>
           <picture>
-            <source srcset="img/Perfect Properties Portfolio_Page_02 600px.jpg" media="max-width:767px">
-            <img src="img/Perfect Properties Portfolio_Page_02 1200px.jpg" alt="PerfectProperties2">
+            <source srcset="img/Perfect_Properties_Portfolio_Page_02_600px.jpg" media="max-width:767px">
+            <img src="img/Perfect_Properties_Portfolio_Page_02_1200px.jpg" alt="PerfectProperties2">
           </picture>
         </div>
         <div>
@@ -53,8 +53,8 @@
         </div>
         <div>
           <picture>
-            <source srcset="img/Perfect Properties Portfolio_Page_03 600px.jpg" media="max-width:767px">
-            <img src="img/Perfect Properties Portfolio_Page_03 1200px.jpg" alt="PerfectProperties3">
+            <source srcset="img/Perfect_Properties_Portfolio_Page_03_600px.jpg" media="max-width:767px">
+            <img src="img/Perfect_Properties_Portfolio_Page_03_1200px.jpg" alt="PerfectProperties3">
           </picture>
         </div>
         <div>
@@ -68,8 +68,8 @@
 
         <div>
           <picture>
-            <source srcset="img/Perfect Properties Portfolio_Page_04 600px.jpg" media="max-width:767px">
-            <img src="img/Perfect Properties Portfolio_Page_04 1200px.jpg" alt="PerfectProperties4">
+            <source srcset="img/Perfect_Properties_Portfolio_Page_04_600px.jpg" media="max-width:767px">
+            <img src="img/Perfect_Properties_Portfolio_Page_04_1200px.jpg" alt="PerfectProperties4">
           </picture>
         </div>
         <div>
@@ -82,8 +82,8 @@
         </div>
         <div>
           <picture>
-            <source srcset="img/Perfect Properties Portfolio_Page_10 600px.jpg" media="max-width:767px">
-            <img src="img/Perfect Properties Portfolio_Page_10 1200px.jpg" alt="PerfectProperties10">
+            <source srcset="img/Perfect_Properties_Portfolio_Page_10_600px.jpg" media="max-width:767px">
+            <img src="img/Perfect_Properties_Portfolio_Page_10_1200px.jpg" alt="PerfectProperties10">
           </picture>
         </div>
         <div>
@@ -96,12 +96,12 @@
         </div>
         <div>
           <picture>
-            <source srcset="img/Perfect Properties Portfolio_Page_29 600px.jpg" media="max-width:767px">
-            <img src="img/Perfect Properties Portfolio_Page_29 1200px.jpg" alt="PerfectProperties29">
+            <source srcset="img/Perfect_Properties_Portfolio_Page_29_600px.jpg" media="max-width:767px">
+            <img src="img/Perfect_Properties_Portfolio_Page_29_1200px.jpg" alt="PerfectProperties29">
           </picture>
           <picture>
-            <source srcset="img/Perfect Properties Portfolio_Page_30 600px.jpg" media="max-width:767px">
-            <img src="img/Perfect Properties Portfolio_Page_30 1200px.jpg" alt="PerfectProperties30">
+            <source srcset="img/Perfect_Properties_Portfolio_Page_30_600px.jpg" media="max-width:767px">
+            <img src="img/Perfect_Properties_Portfolio_Page_30_1200px.jpg" alt="PerfectProperties30">
           </picture>
         </div>
         <div>
@@ -114,8 +114,8 @@
         </div>
         <div>
           <picture>
-            <source srcset="img/Perfect Properties Portfolio_Page_38 600px.jpg" media="max-width:767px">
-            <img src="img/Perfect Properties Portfolio_Page_38 1200px.jpg" alt="PerfectProperties38">
+            <source srcset="img/Perfect_Properties_Portfolio_Page_38_600px.jpg" media="max-width:767px">
+            <img src="img/Perfect_Properties_Portfolio_Page_38_1200px.jpg" alt="PerfectProperties38">
           </picture>
         </div>
         <div>
@@ -128,8 +128,8 @@
         </div>
         <div>
           <picture>
-            <source srcset="img/Perfect Properties Portfolio_Page_71 600px.jpg" media="max-width:767px">
-            <img src="img/Perfect Properties Portfolio_Page_71 1200px.jpg" alt="PerfectProperties38">
+            <source srcset="img/Perfect_Properties_Portfolio_Page_71_600px.jpg" media="max-width:767px">
+            <img src="img/Perfect_Properties_Portfolio_Page_71_1200px.jpg" alt="PerfectProperties38">
           </picture>
         </div>
         <div>
