--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div>
-      <img src="img/gearwingAsset 5.png" alt="GearWing Logo">
+      <img src="img/gearwingAsset5.png" alt="GearWing Logo">
       <nav>
           <ul>
               <li><a href="index.html">Work</a></li>
@@ -25,14 +25,14 @@
         <h1>About</h1>
           <div>
             <picture>
-              <source srcset="img/Profile 600px.jpeg" media="(max-width:767px)">
-              <img src="img/Profile 1200.jpeg" alt="Profile Photo">
+              <source srcset="img/Profile_600px.jpeg" media="(max-width:767px)">
+              <img src="img/Profile_1200.jpeg" alt="Profile Photo">
             </picture>
             <div>
               <div>
                 <h2>My Story</h2>
                 <p>I’m a UX Designer with a background in Psychology, Design, and Marketing. I have a passion to learn and acquire new skills and stay at the forefront of my field. I use those skills to create the best possible design from multiple different perspectives, creating the most effective User Experience possible. I am also happy to consult with others based on the skills with graphic and web design I have, so feel free to connect. <br> In my free time I love to play video games and cook new and interesting dishes. I regularly host dinner parties as an excuse cook a new meal. If I’m not playing games or in the kitchen, I’m likely hanging out with friends or pursuing some new creative hobby I got hooked on. Im currently enjoying life in my new house with my brand new Wife along with our two cats, Naruto and Sasuke.</p>
-                <a href="Files/Alex Poulos Resume v3.pdf" target="_blank">Download My Resume</a>
+                <a href="Files/Alex_Poulos_Resume_v3.pdf" target="_blank">Download My Resume</a>
               </div>
               <div>
                 <h2>Skills & tools</h2>
