--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div>
-      <img src="img/gearwingAsset 5.png" alt="GearWing Logo">
+      <img src="img/gearwingAsset5.png" alt="GearWing Logo">
       <nav>
           <ul>
               <li><a href="index.html">Work</a></li>
@@ -32,8 +32,8 @@
       <div>
         <div>
           <picture>
-            <source srcset="img/Inktank 600px.jpg" media="(max-width:767px)">
-            <img src="img/Inktank 1200px.jpg" alt="My Image">
+            <source srcset="img/Inktank_600px.jpg" media="(max-width:767px)">
+            <img src="img/Inktank_1200px.jpg" alt="My Image">
           </picture>
         </div>
         <div>
@@ -50,8 +50,8 @@
       <div>
         <div>
           <picture>
-            <source srcset="img/Perfect Properties Portfolio_Page_01 600px.jpg" media="(max-width:767px)">
-            <img src="img/Perfect Properties Portfolio_Page_01 1200px.jpg" alt="My Image">
+            <source srcset="img/Perfect_Properties_Portfolio_Page_01_600px.jpg" media="(max-width:767px)">
+            <img src="img/Perfect_Properties_Portfolio_Page_01_1200px.jpg" alt="My Image">
           </picture>
         </div>
         <div>
