CSS first update

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -34,12 +34,12 @@
               <img src="img/Profile_1200.jpeg" alt="Profile Photo">
             </picture>
             <div>
-              <div>
+              <div id="story">
                 <h2>My Story</h2>
                 <p>I’m a UX Designer with a background in Psychology, Design, and Marketing. I have a passion to learn and acquire new skills and stay at the forefront of my field. I use those skills to create the best possible design from multiple different perspectives, creating the most effective User Experience possible. I am also happy to consult with others based on the skills with graphic and web design I have, so feel free to connect. <br> In my free time I love to play video games and cook new and interesting dishes. I regularly host dinner parties as an excuse cook a new meal. If I’m not playing games or in the kitchen, I’m likely hanging out with friends or pursuing some new creative hobby I got hooked on. Im currently enjoying life in my new house with my brand new Wife along with our two cats, Naruto and Sasuke.</p>
-                <a href="Files/Alex_Poulos_Resume_v3.pdf" target="_blank">Download My Resume</a>
+                <a href class="button cv"="Files/Alex_Poulos_Resume_v3.pdf" target="_blank">Download My Resume</a>
               </div>
-              <div>
+              <div id="skills">
                 <h2>Skills & tools</h2>
                 <div>
                   <h3>Skills</h3>
@@ -90,7 +90,7 @@
         Like what you see? Want to get in touch? Let's talk.
       </p>
       <div>
-        <a href="mailto:agpoulos21@gmail.com">Email me</a>
+        <a href class="button contact"="mailto:agpoulos21@gmail.com">Email me</a>
       </div>
       <div>
         <a href="tel:6237766112">Call Me</a>
