--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -24,14 +24,14 @@
       </nav>
     </div>
   </header>
-  <div>
+  <div id="hero">
     <div>
       <h1>Hi, my name is Alex Poulos <span>A UX designer based in Phoenix, Arizona with a background in Psychology and Graphic Design.</span> </h1>
       <p>I’m a UX Designer with a background in Psychology, Design, and Marketing. I have a passion to learn and acquire new skills and stay at the forefront of my field. I use those skills to create the best possible design from multiple different
         perspectives, creating the most effective User Experience possible. I am also happy to consult with others based on the skills with graphic and web design I have, so feel free to connect.</p>
     </div>
   </div>
-  <div>
+  <div id="work">
     <div>
       <h2>My Work</h2>
       <div>
@@ -49,7 +49,7 @@
           <p>
             User Research, UX Design, UI Design, Wire-framing, Prototyping, Logo Design
           </p>
-          <a href="">Read more</a>
+          <a href="Inktank.html" class="button">Read more</a>
         </div>
       </div>
       <div>
@@ -67,7 +67,7 @@
           <p>
             User Research, UX Design, UI Design, Wire-framing, Prototyping, Logo Design
           </p>
-          <a href="PerfectProperties.html">Read more</a>
+          <a href="PerfectProperties.html" class="button">Read more</a>
         </div>
       </div>
     </div>
@@ -79,7 +79,7 @@
         Like what you see? Want to get in touch? Let's talk.
       </p>
       <div>
-        <a href="mailto:agpoulos21@gmail.com">Email me</a>
+        <a href class="button contact"="mailto:agpoulos21@gmail.com">Email me</a>
       </div>
       <div>
         <a href="tel:6237766112">Call Me</a>
