--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
 
 <body>
   <header>
-    <div>
-      <img src="img/gearwingAsset5.png" alt="GearWing Logo">
+    <div class="container">
+      <img class:"logo" src="img/gearwingAsset5.png" alt="GearWing Logo">
       <nav>
-          <ul>
+          <ul class="navigation">
               <li><a href="index.html">Work</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="#contact">Contact</a></li>
