CSS Layout and Basic Design

--- a/PerfectProperties.html
+++ b/PerfectProperties.html
@@ -25,7 +25,7 @@
     </div>
   </header>
   <main>
-    <div>
+    <div id="project">
       <div>
         <h1>Perfect Properties</h1>
       </div>
@@ -154,9 +154,9 @@
         <a href class="button contact"="mailto:agpoulos21@gmail.com">Email me</a>
       </div>
       <div>
-        <a href="tel:6237766112">Call Me</a>
+        <a href class="button contact"="tel:6237766112">Call Me</a>
       </div>
-      <div>
+      <div class="socials">
         <a href="https://www.linkedin.com/in/agp21" target="_blank">
           <svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
             xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -189,7 +189,7 @@
           </svg>
         </a>
         <a href="https://www.instagram.com/Pojo21" target="_blank">
-          <svg enable-background="new 0 0 128 128" height="128px" id="Layer_1" version="1.1" viewBox="0 0 128 128" width="128px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <svg enable-background="new 0 0 128 128" height="100%" id="Layer_1" version="1.1" viewBox="0 0 128 128" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <linearGradient gradientTransform="matrix(1 0 0 -1 594 633)" gradientUnits="userSpaceOnUse" id="SVGID_1_" x1="-577.5122" x2="-482.4879" y1="501.1455" y2="636.8544">
               <stop offset="0" style="stop-color:#FFB900" />
               <stop offset="1" style="stop-color:#9100EB" />
@@ -211,7 +211,7 @@
           </svg>
         </a>
         <a href="https://www.behance.net/agp21" target="_blank">
-          <svg height="72" viewBox="0 0 72 72" width="72" xmlns="http://www.w3.org/2000/svg">
+          <svg height="100%" viewBox="0 0 72 72" width="100%" xmlns="http://www.w3.org/2000/svg">
             <g fill="none" fill-rule="evenodd">
               <path d="M8,72 L64,72 C68.418278,72 72,68.418278 72,64 L72,8 C72,3.581722 68.418278,-8.11624501e-16 64,0 L8,0 C3.581722,8.11624501e-16 -5.41083001e-16,3.581722 0,8 L0,64 C5.41083001e-16,68.418278 3.581722,72 8,72 Z" fill="#0863FF" />
               <path
