--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                 <div class="container">
                 <h2>Skills & tools</h2>
                 <div class="row">
-                  <div>
+                  <div class="col-md-6">
                   <h3>Skills</h3>
                   <ul>
                     <li>User Research</li>
@@ -59,7 +59,7 @@
                     <li>Marketing</li>
                   </ul>
                 </div>
-                    <div>
+                    <div class="col-md-6">
                     <h3>Tools</h3>
                     <ul>
                       <li>Adobe Illustrator</li>
