--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
       <h2>My Work</h2>
       <div class="row">
-        <div>
+        <div class="col-md-6">
           <picture>
             <source srcset="img/Inktank_600px.jpg" media="(max-width:767px)">
             <img src="img/Inktank_1200px.jpg" alt="My Image">
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="row">
-        <div>
+        <div class="col-md-6">
           <picture>
             <source srcset="img/Perfect_Properties_Portfolio_Page_01_600px.jpg" media="(max-width:767px)">
             <img src="img/Perfect_Properties_Portfolio_Page_01_1200px.jpg" alt="My Image">
