--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <div id="aboutme">
       <div>
         <h1>About</h1>
-          <div>
+          <div class="container">
             <picture class="headshot">
               <source srcset="img/Profile_600px.jpeg" media="(max-width:767px)">
               <img src="img/Profile_1200.jpeg" alt="Profile Photo">
