--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <div class="container">
       <h2>My Work</h2>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-lg-7">
           <picture>
             <source srcset="img/Inktank_600px.jpg" media="(max-width:767px)">
             <img src="img/Inktank_1200px.jpg" alt="My Image">
           </picture>
         </div>
-        <div>
+        <div class="col-md-6 col-lg-5">
           <h3>Ink Tank</h3>
           <p>
             Start to finish researched and design of an app to improve and streamline the tattooing process.
@@ -54,13 +54,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-lg-7">
           <picture>
             <source srcset="img/Perfect_Properties_Portfolio_Page_01_600px.jpg" media="(max-width:767px)">
             <img src="img/Perfect_Properties_Portfolio_Page_01_1200px.jpg" alt="My Image">
           </picture>
         </div>
-        <div>
+        <div class="col-md-6 col-lg-5">
           <h3>Perfect Properties</h3>
           <p>
             UI case study for an investment property focusing on first time investors wanting quick and easy access to browsing properties.
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-lg-7">
           <picture>
             <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration"  viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
@@ -1009,7 +1009,7 @@
   </svg>
           </picture>
         </div>
-        <div>
+        <div class="col-md-6 col-lg-5">
           <h3>CSS Animation</h3>
           <p>
             This is a basic CSS animation.
