--- a/about.html
+++ b/about.html
@@ -128,6 +128,7 @@
       <p>Copyright Alex Poulos 2021</p>
         </div>
   </footer>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
