--- a/index.html
+++ b/index.html
@@ -1060,6 +1060,7 @@
       <p>Copyright Alex Poulos 2021</p>
         </div>
   </footer>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
