--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
               <div id="story">
                 <h2>My Story</h2>
                 <p>I’m a UX Designer with a background in Psychology, Design, and Marketing. I have a passion to learn and acquire new skills and stay at the forefront of my field. I use those skills to create the best possible design from multiple different perspectives, creating the most effective User Experience possible. I am also happy to consult with others based on the skills with graphic and web design I have, so feel free to connect. <br> In my free time I love to play video games and cook new and interesting dishes. I regularly host dinner parties as an excuse cook a new meal. If I’m not playing games or in the kitchen, I’m likely hanging out with friends or pursuing some new creative hobby I got hooked on. Im currently enjoying life in my new house with my brand new Wife along with our two cats, Naruto and Sasuke.</p>
-                <a href class="button cv"="Files/Alex_Poulos_Resume_v3.pdf" target="_blank">Download My Resume</a>
+                <a href="Files/Alex_Poulos_Resume_v3.pdf" class="button cv" target="_blank">Download My Resume</a>
               </div>
               <div id="skills">
                 <div class="container">
