--- a/PerfectProperties.html
+++ b/PerfectProperties.html
@@ -155,14 +155,14 @@
         Like what you see? Want to get in touch? Let's talk.
       </p>
       <div>
-        <a href class="button contact"="mailto:agpoulos21@gmail.com">Email me</a>
+        <a class="button contact" href="mailto:agpoulos21@gmail.com">Email me</a>
       </div>
       <div>
-        <a href class="button contact"="tel:6237766112">Call Me</a>
+        <a class="button contact" href="tel:6237766112">Call Me</a>
       </div>
       <div class="socials">
         <a href="https://www.linkedin.com/in/agp21" target="_blank">
-          <svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+          <svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;" version="1.1" viewbox="0 0 512 512" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
             xmlns:serif="http://www.serif.com/" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g id="g5891">
               <path d="M512,64c0,-35.323 -28.677,-64 -64,-64l-384,0c-35.323,0 -64,28.677 -64,64l0,384c0,35.323 28.677,64 64,64l384,0c35.323,0 64,-28.677 64,-64l0,-384Z" id="background" style="fill:#2867b2;" />
@@ -179,7 +179,7 @@
         </a>
         <a href="https://www.twitter.com/Pojo21" target="_blank">
 
-          <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 455.731 455.731" style="enable-background:new 0 0 455.731 455.731;" xml:space="preserve">
+          <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 455.731 455.731" style="enable-background:new 0 0 455.731 455.731;" xml:space="preserve">
             <g>
               <rect x="0" y="0" style="fill:#50ABF1;" width="455.731" height="455.731" />
               <path style="fill:#FFFFFF;" d="M60.377,337.822c30.33,19.236,66.308,30.368,104.875,30.368c108.349,0,196.18-87.841,196.18-196.18
@@ -193,11 +193,11 @@
           </svg>
         </a>
         <a href="https://www.instagram.com/Pojo21" target="_blank">
-          <svg enable-background="new 0 0 128 128" height="100%" id="Layer_1" version="1.1" viewBox="0 0 128 128" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <linearGradient gradientTransform="matrix(1 0 0 -1 594 633)" gradientUnits="userSpaceOnUse" id="SVGID_1_" x1="-577.5122" x2="-482.4879" y1="501.1455" y2="636.8544">
+          <svg enable-background="new 0 0 128 128" height="100%" id="Layer_1" version="1.1" viewbox="0 0 128 128" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <lineargradient gradienttransform="matrix(1 0 0 -1 594 633)" gradientunits="userSpaceOnUse" id="SVGID_1_" x1="-577.5122" x2="-482.4879" y1="501.1455" y2="636.8544">
               <stop offset="0" style="stop-color:#FFB900" />
               <stop offset="1" style="stop-color:#9100EB" />
-            </linearGradient>
+            </lineargradient>
             <path d="M128,112c0,8.8-7.2,16-16,16H16c-8.8,0-16-7.2-16-16V16C0,7.2,7.2,0,16,0h96c8.8,0,16,7.2,16,16V112z  " fill="url(#SVGID_1_)" />
             <g>
               <g>
@@ -215,7 +215,7 @@
           </svg>
         </a>
         <a href="https://www.behance.net/agp21" target="_blank">
-          <svg height="100%" viewBox="0 0 72 72" width="100%" xmlns="http://www.w3.org/2000/svg">
+          <svg height="100%" viewbox="0 0 72 72" width="100%" xmlns="http://www.w3.org/2000/svg">
             <g fill="none" fill-rule="evenodd">
               <path d="M8,72 L64,72 C68.418278,72 72,68.418278 72,64 L72,8 C72,3.581722 68.418278,-8.11624501e-16 64,0 L8,0 C3.581722,8.11624501e-16 -5.41083001e-16,3.581722 0,8 L0,64 C5.41083001e-16,68.418278 3.581722,72 8,72 Z" fill="#0863FF" />
               <path
