--- a/about.html
+++ b/about.html
@@ -98,10 +98,10 @@
         Like what you see? Want to get in touch? Let's talk.
       </p>
       <div>
-        <a href class="button contact"="mailto:agpoulos21@gmail.com">Email me</a>
+        <a class="button contact" href="mailto:agpoulos21@gmail.com">Email me</a>
       </div>
       <div>
-        <a href class="button contact"="tel:6237766112">Call Me</a>
+        <a class="button contact" href="tel:6237766112">Call Me</a>
       </div>
       <div class="socials">
         <a href="https://www.linkedin.com/in/agp21" target="_blank">
